# cmake-cpp-template

./: CMakeLists.txt
mylib/: CMakeLists.txt  mymath.cpp
src/: CMakeLists.txt  demo.cpp
